<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/caffs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/view_caff_list_item" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp" />

    <LinearLayout
        android:id="@+id/searchSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnPrimary"
        android:orientation="vertical"
        android:padding="@dimen/search_item_margin"
        app:behavior_hideable="false"
        app:behavior_peekHeight="75dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/search_item_margin"
            android:text="@string/search_title_filter"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

        <EditText
            android:id="@+id/searchTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_item_margin"
            android:hint="@string/search_content_search_term"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_item_margin"
            android:hint="@string/search_content_creator_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/uploader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_item_margin"
            android:hint="@string/search_content_uploader_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/creationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_item_margin"
            android:hint="@string/search_content_creation_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:id="@+id/uploadDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_item_margin"
            android:hint="@string/search_content_upload_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_item_margin"
            android:text="@string/search_action_search" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/search_item_margin"
            android:text="@string/search_action_clear" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>