<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.CaffShop.CardView.Comment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/user_item_margin"
    android:layout_marginVertical="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/user_item_margin">

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/user_text_margin"
            android:text="@string/placeholder"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/infoBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="username" />

        <TableLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/user_item_margin"
            android:orientation="horizontal"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoBarrier">

            <TableRow>

                <TextView
                    android:gravity="start"
                    android:text="@string/user_list_item_is_admin"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:id="@+id/isAdmin"
                    android:gravity="end"
                    android:text="@string/placeholder"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="start"
                    android:text="@string/user_details_reg_date"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:id="@+id/regDate"
                    android:gravity="end"
                    android:text="@string/placeholder"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>